Arrow icon for all options without icon

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -52,7 +52,8 @@
         side_for=$side_number
         image="misc/aethyr-first.webp"
         [option]
-            label="<b>»</b> "+_"Change status of Wounds"
+            image=misc/nfw-arrow.png
+            label=_"Change status of Wounds"
             default=yes
             [command]
                 [message]
@@ -60,7 +61,8 @@
                     message=_"Set status of Wounds."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_wounds
@@ -75,7 +77,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_wounds
@@ -90,7 +93,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate, but can lost plagued unit"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate, but can lost plagued unit"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_wounds
@@ -109,14 +113,16 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Change float text"
+            image=misc/nfw-arrow.png
+            label=_"Change float text"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set float text with the wound received."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_float_text
@@ -131,7 +137,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_float_text
@@ -150,14 +157,16 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Change messages"
+            image=misc/nfw-arrow.png
+            label=_"Change messages"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set messages when receives a wound. Units or narrator will do differents dialogues depending on the type of wound received, with indications or help if applicable. This message is visible only for the wounded unit owner."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfw_dialog_manual
@@ -172,7 +181,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfw_dialog_manual
@@ -191,7 +201,8 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"List of physical wounds"
+            image=misc/nfw-arrow.png
+            label=_"List of physical wounds"
             [command]
                 [message]
                     speaker=narrator
@@ -220,7 +231,8 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"List of psychological wounds"
+            image=misc/nfw-arrow.png
+            label=_"List of psychological wounds"
             [command]
                 [message]
                     speaker=narrator
@@ -244,7 +256,8 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"List of healing methods"
+            image=misc/nfw-arrow.png
+            label=_"List of healing methods"
             [command]
                 [message]
                     speaker=narrator
@@ -287,14 +300,16 @@
         side_for=$side_number
         image="misc/bone-captain2.webp"
         [option]
-            label="<b>»</b> "+_"Change status of Death"
+            image=misc/nfw-arrow.png
+            label=_"Change status of Death"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Death."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_deadundead
@@ -309,7 +324,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate Death"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate Death"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_deadundead
@@ -324,7 +340,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate Death, Undeath and Ghosts"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate Death, Undeath and Ghosts"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_deadundead
@@ -355,14 +372,16 @@
         side_for=$side_number
         image="misc/elementals.png"
         [option]
-            label="<b>»</b> "+_"Change status of Elementals"
+            image=misc/nfw-arrow.png
+            label=_"Change status of Elementals"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Elementals."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_elemental
@@ -377,7 +396,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_elemental
@@ -396,7 +416,8 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"List of elemental transformations"
+            image=misc/nfw-arrow.png
+            label=_"List of elemental transformations"
             [command]
                 {VARIABLE_OP nfw_elementals rand "1..6"}
                 [switch]
@@ -449,14 +470,16 @@
         side_for=$side_number
         image="misc/{WOUND}"
         [option]
-            label="<b>»</b> "+_"Change status of Funny wounds"
+            image=misc/nfw-arrow.png
+            label=_"Change status of Funny wounds"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Funny wounds."
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_funny
@@ -471,7 +494,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfwe_funny
@@ -504,14 +528,16 @@
         side_for=$side_number
         image=portraits/Lethalia.png
         [option]
-            label="<b>»</b> "+_"Change status of Wounds healing"
+            image=misc/nfw-arrow.png
+            label=_"Change status of Wounds healing"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of Wounds healing. If you choose 'yes', in the next unit advancement you will be able to choose between the possible healings of this unit, instead of the powerful upgrades that it has by default. Unless you manually change it with the AMLA switch menu, it will only activate/deactivate on units that are wounded or have advanced at least once since the time you changed the option."
                     image=portraits/Vritra.png
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfw_loti_amla
@@ -526,7 +552,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [set_variable]
                                 name=nfw_loti_amla
@@ -545,14 +572,16 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Change status of AMLA switch menu"
+            image=misc/nfw-arrow.png
+            label=_"Change status of AMLA switch menu"
             [command]
                 [message]
                     speaker=narrator
                     message=_"Set status of AMLA switch menu. If you choose 'yes', you will be able to switch at any time between the default LOTI advances or any of the healings. Very useful to choose different options depending on the unit, or when the unit is about to advance and you change your mind."
                     image=portraits/Delenia.png
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Activate"+"</i>"
                         [command]
                             [set_menu_item]
                                 id=nfw_loti_amla
@@ -655,7 +684,8 @@
                         [/command]
                     [/option]
                     [option]
-                        label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
+                        image=misc/nfw-arrow.png
+                        label="<i>"+_"Deactivate"+"</i>"
                         [command]
                             [clear_menu_item]
                                 id=nfw_healing_amla,nfw_loti_amla
@@ -767,7 +797,8 @@
                     side_for=$side_number
                     image="misc/nfw-icon.png"
                     [option]
-                        label="<b>»</b> "+_"Yes"
+                        image=misc/nfw-arrow.png
+                        label=_"Yes"
                         [command]
                             [message]
                                 speaker=narrator
