--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -134,6 +134,15 @@
             [or]
                 find_in=nfw_wounded
             [/or]
+            [or]
+                ability=necromancy
+                [not]
+                    race=undead
+                [/not]
+                [not]
+                    race=black soul-loti
+                [/not]
+            [/or]
 #ifdef CAMPAIGN_TO_LANDS_UNKNOWN
             [or]
                 type=TLU_DharmaRashti,TLU_HoRashti,TLU_True_Rashti,TLU_HoRashti
