--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -18,6 +18,17 @@
     [/store_unit_type]
 [/event]
 
+# necromancy ability or similar
+[event]
+    name=last_breath
+    id=nfwme_necromancy
+    first_time_only=no
+    [filter]
+        ability=necromancy
+    [/filter]
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
 # souls catched by the Dimensional Gate
 [event]
     name=last_breath,die
