Filtered infected status on LOTI
This is the only way for now, because the unit is created from scratch and fires the die event AFTER

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -134,6 +134,12 @@
             [or]
                 find_in=nfw_wounded
             [/or]
+#ifdef LOTI_1_OR_2
+            [or]
+                formula="hitpoints = max_hitpoints and moves = 0 and attacks_left = 0"
+                type=Walking Corpse,Soulless
+            [/or]
+#endif
             [or]
                 ability=necromancy
                 [not]
