--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -21,13 +21,26 @@
 # necromancy ability or similar
 [event]
     name=last_breath
-    id=nfwme_necromancy
+    id=nfwm_necromancy
     first_time_only=no
     [filter]
         ability=necromancy
     [/filter]
     {VARIABLE nfw_already_wound yes}
 [/event]
+
+#ifdef LOTI_1_OR_2
+[event]
+    name=last_breath
+    id=nfwm_infected
+    first_time_only=no
+    [filter]
+        formula="hitpoints = max_hitpoints and moves = 0 and attacks_left = 0"
+        type=Walking Corpse,Soulless
+    [/filter]
+    {VARIABLE nfw_already_wound yes}
+[/event]
+#endif
 
 # souls catched by the Dimensional Gate
 [event]
@@ -1805,3 +1818,10 @@
     [/modify_unit]
 [/event]
 #endif
+
+[event]
+    name=die
+    id=nfw_clear_variable
+    first_time_only=no
+    {CLEAR_VARIABLE nfw_already_wound}
+[/event]
