Adaptation to the fix of LOTI infected

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -35,8 +35,12 @@
     id=nfwm_infected
     first_time_only=no
     [filter]
-        formula="hitpoints = max_hitpoints and moves = 0 and attacks_left = 0"
-        type=Walking Corpse,Soulless
+        status=infected
+        [not]
+            [filter_location]
+                terrain=*^V*
+            [/filter_location]
+        [/not]
     [/filter]
     {VARIABLE nfw_already_wound yes}
 [/event]
