--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -134,12 +134,14 @@
             [or]
                 find_in=nfw_wounded
             [/or]
-#ifdef LOTI_1_OR_2
             [or]
-                formula="hitpoints = max_hitpoints and moves = 0 and attacks_left = 0"
-                type=Walking Corpse,Soulless
+                status=infected
+                [not]
+                    [filter_location]
+                        terrain=*^V*
+                    [/filter_location]
+                [/not]
             [/or]
-#endif
             [or]
                 ability=necromancy
                 [not]
