Changed probabilities for some races

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1053,6 +1053,14 @@
                             {EVENT_UNIT}
                             terrain=A*,D*
                         [/have_location]
+                        [not]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    race=quenoth,dunefolk
+                                [/filter]
+                            [/have_location]
+                        [/not]
                         [then]
                             {NFW_fear_of_desert_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1080,6 +1088,14 @@
                                 {EVENT_UNIT}
                                 terrain=U*
                             [/have_location]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        race=troll,dwarf,bats
+                                    [/filter]
+                                [/have_location]
+                            [/not]
                             [then]
                                 {NFW_fear_of_cave_WOUND}
                                 {VARIABLE rand_wound_selected yes}
@@ -1090,6 +1106,14 @@
                                 {EVENT_UNIT}
                                 terrain=M*,H*
                             [/have_location]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        race=ogre,troll,dwarf
+                                    [/filter]
+                                [/have_location]
+                            [/not]
                             [then]
                                 {NFW_fear_of_hight_WOUND}
                                 {VARIABLE rand_wound_selected yes}
@@ -1100,6 +1124,34 @@
                                 {EVENT_UNIT}
                                 terrain=W*,S*
                             [/have_location]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    terrain=S*
+                                    [filter]
+                                        race=lizard
+                                    [/filter]
+                                [/have_location]
+                            [/not]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        race=merman,naga
+                                    [/filter]
+                                [/have_location]
+                            [/not]
+                            [not]
+                                {VARIABLE_CONDITIONAL nfwe_unit_type.undead_variation equals swimmer}
+                            [/not]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        formula="movement_cost(self, 'Gg') > max_moves and movement_cost(self, 'Wo') = 1"
+                                    [/filter]
+                                [/have_location]
+                            [/not]
                             [then]
                                 {NFW_fear_of_water_WOUND}
                                 {VARIABLE rand_wound_selected yes}
@@ -1145,10 +1197,16 @@
                                     [have_location]
                                         {EVENT_UNIT}
                                         [filter]
-                                            formula="movement_cost(self, 'Gg') > max_moves"
-                                            [and]
-                                                formula="movement_cost(self, 'Wo') = 1"
-                                            [/and]
+                                            formula="movement_cost(self, 'Gg') > max_moves and movement_cost(self, 'Wo') = 1"
+                                        [/filter]
+                                    [/have_location]
+                                [/or]
+                                [or]
+                                    [have_location]
+                                        {EVENT_UNIT}
+                                        terrain=S*
+                                        [filter]
+                                            race=lizard
                                         [/filter]
                                     [/have_location]
                                 [/or]
